--- a/style.less
+++ b/style.less
@@ -33,7 +33,9 @@ body {
 
 @purple: #46156c;
 @blue: #5292bb;
+@blue-con: #8db3ce;
 @green: #a3bd31;
+@green-background: #93ad1f;
 @blue-background: #4493bc;
 @gray: #9a999e;
 @white: #f1f2f4;
@@ -127,6 +129,13 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+i{
+    color: @blue-con;
+    font-size: 30px;
+    
+}
+
+
 .hide-desktop{
     display: none;
 }
@@ -187,7 +196,16 @@ p {
     &.big-p{
         font-size: 24px;
     }
+    &.bigger{
+        font-size: 26px;
+    }
+    &.blue{
+        color: @blue;
+        font-weight: 700;
+    }
+    
 }
+
 
 ul {
       
@@ -236,6 +254,15 @@ div.contenedor-center{
     text-align: center;
 }
 
+div.center{
+    text-align: center;
+    justify-content: center;
+}
+
+/* ==========================================================================
+   Home
+   ========================================================================== */
+
 #intro {
     padding-top: 400px;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./img/home/people-top.jpg) no-repeat center top;
@@ -243,8 +270,6 @@ div.contenedor-center{
     
     min-height: 500px;
     display: block;
-    
-    
     
 }
 
@@ -272,7 +297,7 @@ div.contenedor-center{
 #mision .fondo {
     background: url(./img/home/afiliate.jpg) no-repeat center top;
     background-size: cover;
-    min-height: 500px;
+    min-height: 650px;
 }
 
 #vision .flex {
@@ -310,11 +335,55 @@ div.contenedor-center{
 #vision .fondo {
     background: url(./img/home/birrete.jpg) no-repeat center top;
     background-size: cover;
-    min-height: 500px;
+    min-height: 650px;
 }
 
-#123{
+#blue123{
     background-color: @blue-background;
+    background-size: cover;
+    min-height: 450px;
+    h2{
+        color: @white;
+            
+    }
+    
+    .flex{
+        padding: 140px 60px;
+        .columna{
+            img{
+                padding-bottom: 40px;
+            }
+            p{
+                line-height: 120%;
+            }
+            width: 33%;
+            padding: 0px 90px;
+        }
+        &.center-h{
+            padding-bottom: 0px;
+        }
+    }
+    div.green-line{
+        background-color: @green;
+        height: 20px;
+    }
+}
+
+#descuento{
+    background-color: @white;
+    min-height: 500px;
+    #miss-veg{
+        background: url(./img/home/miss-veggies.png) no-repeat center;
+        background-size: 89%;
+        width: 40%;
+    }
+    .columna{
+      width: 60%;    
+      min-height: 500px; 
+        h2{
+            margin-top: 15%;
+        }
+    }
 }
 
 #banner {
@@ -378,6 +447,145 @@ div.contenedor-center{
         }
     }
 }
+
+/* ==========================================================================
+   Quienes somos
+   ========================================================================== */
+
+#who .fondo {
+    background: url(./img/quienes/elasticidad.jpg) no-repeat center;
+    background-size: cover;
+    min-height: 650px;
+}
+
+#who{
+    background-color: @white;
+    
+    .flex {
+        min-height: 500px;
+        align-items: center;
+        .columna{
+            padding-left: 70px;
+        }
+        h2{
+            padding-bottom: 25px;
+        }
+  }
+}
+
+#mision-vision{
+    background-color: @white;
+}
+
+#mision-vision .flex {
+    min-height: 500px;
+    align-items: center;
+    li{
+        //padding-left: 50px;
+    }
+    h2{
+        //padding-left: 50px;
+    }
+}
+
+#mision-vision .contenido {
+    max-width: 500px;
+    float: left;
+    padding-left: 50px;
+    li{
+        line-height: 240%;
+        padding: 0;
+        
+    }
+    ul{
+        padding-bottom: 20px;
+    }
+}
+
+#mision-vision .contenido p {
+    color: #9c9aa0;
+}
+
+#mision-vision .fondo {
+    background: url(./img/quienes/girl-mision.jpg) no-repeat center top;
+    background-size: cover;
+    min-height: 650px;
+}
+
+#valores{
+    background-color: @green-background;
+    min-height: 500px;
+    h2{
+        color: @white;        
+    }
+    .center{
+        padding: 0px 180px;
+    }
+    .flex{
+        padding: 5px 0px;
+        .columna{
+            img{
+                padding-bottom: 40px;
+            }
+            p{
+                line-height: 120%;
+            }
+            width: 50%;
+            padding: 0px 0px;
+            
+        }
+        &.center-h{
+            padding: 80px 0px;
+        }
+    }
+    div.blue-line{
+        background-color: @blue-background;
+        height: 20px;
+    }
+}
+
+#contact{
+    background-color: @white;
+    min-height: 666px;
+    padding-top: 150px;
+    .columna{
+        padding-top: 40px;
+
+    }
+    .flex{
+        .columna{
+            .contacto{
+            align-items: center;
+            padding-right: 20px;
+            width: 5%;
+                i{
+                    padding: 6px 0px 36px 0px;
+                    
+                }
+            }
+            .columna-contacto{
+                width: 95%;
+            }
+        }
+        
+    }
+    
+    .border{
+      border: 2px solid @blue;
+      height: 180px;
+      width: 500px;
+      resize: both;
+      overflow: auto;
+    }
+    iframe {
+
+    }
+}
+
+
+    
+
+
 
 /* ==========================================================================
    Helper classes
@@ -473,9 +681,16 @@ div.contenedor-center{
    ========================================================================== */
 
 @media only screen and (max-width: 600px) {
+    
+    p.bigger{
+        font-size: 17px;
+    }
 
     p {
-        font-size: 16px;
+        font-size: 14px;
+    }
+    h2{
+        font-size: 20px;
     }
 
     .hide-movil {
@@ -573,6 +788,291 @@ div.contenedor-center{
     }
     }
     
+    /* ==========================================================================
+   Quienes somos RESPONSIVE
+   ========================================================================== */
+
+#who .fondo {
+    background: url(./img/quienes/elasticidad.jpg) no-repeat center;
+    background-size: 100%;
+    min-height: 150px;
+    margin-bottom: 30px;
+}
+
+#who{
+    background-color: @white;
+    
+    .flex {
+        min-height: 500px;
+        align-items: center;
+        text-align: center;
+        .columna{
+            padding-left: 10px;
+        }
+        h2{
+            padding-bottom: 25px;
+        }
+  }
+}
+
+#mision-vision{
+    background-color: @white;
+}
+
+#mision-vision .flex {
+    min-height: 400px;
+    align-items: center;
+    text-align: center;
+    li{
+        //padding-left: 50px;
+    }
+    h2{
+        //padding-left: 50px;
+    }
+}
+
+#mision-vision .contenido {
+    max-width: 500px;
+    float: left;
+    padding-left: 0px;
+    li{
+        line-height: 240%;
+        padding: 0;
+        
+    }
+    ul{
+        padding-bottom: 20px;
+    }
+}
+
+#mision-vision .contenido p {
+    color: #9c9aa0;
+}
+
+#mision-vision .fondo {
+    background: url(./img/quienes/girl-mision.jpg) no-repeat center top;
+    background-size: 100%;
+    min-height: 150px;
+}
+
+#valores{
+    min-height: 200px;
+    img{
+        width: 100%;
+    }
+
+    .center{
+        padding: 0px 40px;
+    }
+    .flex{
+        padding: 5px 0px;
+        .columna{
+            img{
+                padding-bottom: 20px;
+            }
+            width: 100%;
+            padding: 0px 0px;
+            
+        }
+        &.center-h{
+            padding: 20px 0px;
+        }
+    }
+    div.blue-line{
+        background-color: @blue-background;
+        height: 7px;
+    }
+}
+
+#contact{
+    background-color: @white;
+    min-height: 366px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    .columna{
+        padding-top: 10px;
+    }
+    .border{
+      border: 1px solid @blue;
+      height: 180px;
+      width: 225px;
+      resize: both;
+      overflow: auto;
+    }
+    iframe {
+        
+    }
+    
+    .flex{
+        .columna{
+            padding: 0px 5px;
+            p{
+                font-size: 12px;
+                padding: 0px 0px;
+            }
+            
+            .contacto{
+            align-items: center;
+            padding-right: 5px;
+            width: 15%;
+                i{
+                    padding: 0px;
+                    font-size: 20px;
+                    
+                }
+            }
+            .columna-contacto{
+                width: 80%;
+            }
+        }
+        
+    }
+}
+/* ==========================================================================
+   Home RESPONSIVE
+   ========================================================================== */
+
+  ul {
+  }
+
+    li {
+      padding-bottom: 8px;
+      font-size: 12px;
+      font-weight: 400; 
+      line-height: 120%; 
+    }
+
+    .btn-purple{
+        font-size: 12px;
+        padding: 2px 8px;
+    }
+    div.contenedor-center{
+        padding: 0px;  
+        width: 90%;
+    }
+    
+#intro {
+    padding: 40px 0px;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./img/home/people-top.jpg) no-repeat center top;
+    background-size: cover;
+    min-height: 200px;
+    display: block;
+    
+    h1{
+        font-size: 21px;
+    }
+    p.big-p{
+    font-size: 15px;        
+    }    
+
+}
+
+#mision {
+    min-height: 800px;
+    .flex {
+    
+    align-items: center;
+    li{
+        padding-right: 10px;
+        }
+    h2{
+        padding-left: 20px;
+        padding-bottom: 10px;
+        font-size: 18px;
+    }
+  }
+}
+
+#mision p {
+    max-width: 300px;
+    float: left;
+    color: #9c9aa0;
+}
+
+#mision .fondo {
+    background: url(./img/home/afiliate.jpg) no-repeat center top;
+    background-size: cover;
+    min-height: 200px;
+}
+
+#vision .flex {
+    min-height: 300px;
+    align-items: center;
+    li{
+        //padding-left: 50px;
+    }
+    h2{
+        //padding-left: 50px;
+    }
+
+}
+
+#vision .contenido {
+    min-height: 240px;
+    float: left;
+    padding-left: 30px;
+    li{
+        line-height: 200%;
+        padding: 0;
+        
+    }
+    ul{
+        padding-bottom: 10px;
+    }
+}
+
+
+#vision .fondo {
+    background: url(./img/home/birrete.jpg) no-repeat center top;
+    background-size: cover;
+    min-height: 200px;
+}
+
+#blue123{
+    min-height: 280px;
+    h2{
+        color: @white;        
+    }
+    
+    .flex{
+        text-align: center;
+        padding: 40px 10px;
+        .columna{
+            img{
+                padding-bottom: 20px;
+            }
+            p{
+                line-height: 110%;
+            }
+            width: 100%;
+            padding: 10px;
+        }
+        img{
+            width: 90%;
+        }
+    }
+    div.green-line{
+        height: 7px;
+    }
+}
+
+#descuento{
+    min-height: 300px;
+    #miss-veg{
+        background: url(./img/home/miss-veggies.png) no-repeat center;
+        background-size: cover;
+        width: 100%;
+        min-height: 200px;
+    }
+    .columna{
+      width: 100%;    
+      min-height: 100px; 
+        h2{
+            margin-top: 15%;
+        }
+    }
+}
+
     
 }
 
