--- a/style.less
+++ b/style.less
@@ -276,7 +276,7 @@ div.center{
 #mision {
     .flex {
     
-    min-height: 500px;
+    min-height: 640px;
     align-items: center;
     li{
         padding-right: 70px;
@@ -295,9 +295,22 @@ div.center{
 }
 
 #mision .fondo {
-    background: url(./img/home/afiliate.jpg) no-repeat center top;
+    background: url(./img/home/afiliate.jpg) no-repeat center;
     background-size: cover;
     min-height: 650px;
+}
+
+#vision{
+    min-height: 640px;
+    
+    img#sello{
+        padding-top: 22px;
+        padding-left: 18px;
+    }
+    
+    .pad-top{
+        padding-top: 100px;
+    }
 }
 
 #vision .flex {
@@ -319,7 +332,7 @@ div.center{
     float: left;
     padding-left: 50px;
     li{
-        line-height: 240%;
+        line-height: 120%;
         padding: 0;
         
     }
@@ -374,7 +387,7 @@ div.center{
     min-height: 500px;
     #miss-veg{
         background: url(./img/home/miss-veggies.png) no-repeat center;
-        background-size: 89%;
+        background-size: cover;
         width: 40%;
     }
     .columna{
@@ -996,7 +1009,7 @@ div.center{
 }
 
 #vision .flex {
-    min-height: 300px;
+    min-height: 400px;
     align-items: center;
     li{
         //padding-left: 50px;
@@ -1021,7 +1034,10 @@ div.center{
     }
 }
 
-
+    #vision{
+        min-height: 800px;
+    }
+    
 #vision .fondo {
     background: url(./img/home/birrete.jpg) no-repeat center top;
     background-size: cover;
