--- a/style.less
+++ b/style.less
@@ -593,6 +593,55 @@ div.center{
     iframe {
 
     }
+    
+    ////FORM CALDERA////
+    
+    
+    .caldera-grid .form-control::-webkit-input-placeholder {
+    color: white;
+    }
+    
+    //BUTTON
+    #fld_5397368_1{ 
+    background-color: @purple;
+    color: @white;
+    font-size: 18px;
+    border: 0;
+    padding: 4px 16px;
+    border-radius: 8px;
+
+        
+    }
+    
+    .form-control{
+        background-color: @blue-con;
+        //border: 0px solid white;
+        border-radius: 8px;
+        //font-family: 'Allgemeine';
+    }
+    
+    
+    #CF5b0348dd99b2a_1-row-5{
+        float: right;
+    }
+    
+    .control-label{
+        font-size: 24px;
+        color: @gray;
+        padding-bottom: 30px;
+    }
+    
+    label{
+        color: @gray;
+    }
+    
+    .col-sm-12.single{
+        padding-bottom: 15px;
+    }
+    .col-sm-6{
+        padding-bottom: 15px;
+    }
+    
 }
 
 
