--- a/style.less
+++ b/style.less
@@ -1,8 +1,8 @@
 /*
-Theme Name:     Jupiter Child Theme
+Theme Name:     Health Brillante
 Theme URI: 		http://themeforest.net/user/artbees
 Description:    Child theme for the Jupiter theme 
-Author:         Your name here
+Author:         Alex EsBrillante
 Theme URI: 		http://themeforest.net/user/artbees
 Template:       jupiter
 Version:        1.0
