--- a/style.css
+++ b/style.css
@@ -26,6 +26,18 @@ body {
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
+@font-face {
+  font-family: 'Roboto';
+  src: url('fonts/Roboto-Bold.woff2') format('woff2'), url('fonts/Roboto-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Roboto';
+  src: url('fonts/Roboto-Regular.woff2') format('woff2'), url('fonts/Roboto-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
 html {
   color: #222;
   font-size: 1em;
@@ -199,6 +211,28 @@ div.contenedor-center {
 div.center {
   text-align: center;
   justify-content: center;
+}
+/* ==========================================================================
+   Header
+   ========================================================================== */
+.header-style-2 .header-logo a img {
+  width: 200px;
+}
+.mk-desktop-logo .dark-logo .mk-svg {
+  width: 200px;
+}
+img.mk-desktop-logo {
+  width: 200px;
+}
+img.dark-logo {
+  width: 200px;
+}
+img.mk-svg {
+  width: 200px;
+}
+.header-style-1 .logo-has-sticky .mk-sticky-logo,
+.header-style-3 .logo-has-sticky .mk-sticky-logo {
+  opacity: 1;
 }
 /* ==========================================================================
    Home
@@ -410,7 +444,7 @@ div.center {
   color: #f1f2f4;
 }
 #valores .center {
-  padding: 0px 180px;
+  padding: 0px 100px;
 }
 #valores .flex {
   padding: 5px 0px;
@@ -469,12 +503,24 @@ div.center {
   padding: 4px 16px;
   border-radius: 8px;
 }
+#contact #fld_7908577_2 {
+  background-color: #46156c;
+  color: #f1f2f4;
+  font-size: 18px;
+  border: 0;
+  padding: 4px 16px;
+  border-radius: 8px;
+}
 #contact .form-control {
   background-color: #8db3ce;
   border-radius: 8px;
 }
 #contact #CF5b0348dd99b2a_1-row-5 {
   float: right;
+}
+#contact #CF5ad15a1cc0472_2-row-3 {
+  float: right;
+  padding-right: 16px;
 }
 #contact .control-label {
   font-size: 24px;
@@ -489,6 +535,71 @@ div.center {
 }
 #contact .col-sm-6 {
   padding-bottom: 15px;
+}
+/* ==========================================================================
+   Aviso de privacidad
+   ========================================================================== */
+#aviso {
+  padding-top: 100px;
+}
+#aviso h1 {
+  color: #46156c;
+}
+#aviso h2 {
+  padding-top: 30px;
+  font-size: 24px;
+}
+#aviso li {
+  color: #9a999e;
+  font-size: 18px;
+}
+#aviso ul {
+  padding-bottom: 25px;
+}
+#aviso i {
+  color: #9a999e;
+  font-size: 18px;
+}
+/* ==========================================================================
+   footer
+   ========================================================================== */
+#footer {
+  padding: 60px 105px;
+  background-color: #282828;
+}
+#footer .menu-footer {
+  padding-left: 20px;
+}
+#footer a:hover {
+  color: #9a999e;
+}
+#footer a {
+  color: white;
+}
+#footer p {
+  color: white;
+  font-size: 12px;
+  word-spacing: 4px;
+}
+#footer #flogo {
+  width: 10%;
+}
+#footer #flogo p {
+  padding: 0px;
+  margin: 0px;
+}
+#footer .bot {
+  padding-top: 30px;
+}
+#footer .columna {
+  width: 30%;
+}
+/* ==========================================================================
+   header menu
+   ========================================================================== */
+ul li::before {
+  content: "• ";
+  color: white;
 }
 /* ==========================================================================
    Helper classes
@@ -870,7 +981,6 @@ div.center {
   #descuento #miss-veg {
     background: url(img/home/miss-veggies.png) no-repeat center;
     background-size: cover;
-    width: 100%;
     min-height: 200px;
   }
   #descuento .columna {
