--- a/style.less
+++ b/style.less
@@ -258,7 +258,27 @@ ul li::before {
     color: @white;
     font-size: 18px;
     border: 0;
-    padding: 4px 16px;
+    padding: 4px 24px;
+    border-radius: 8px;
+    
+}
+
+.btn-blue{
+    background-color: @blue-background;
+    color: @white;
+    font-size: 18px;
+    border: 0;
+    padding: 4px 24px;
+    border-radius: 8px;
+    
+}
+
+.btn-green{
+    background-color: @green;
+    color: @white;
+    font-size: 18px;
+    border: 0;
+    padding: 4px 24px;
     border-radius: 8px;
     
 }
@@ -732,6 +752,249 @@ img.mk-svg{
         font-size: 18px;
     }
 }
+
+/* ==========================================================================
+   Weekend
+   ========================================================================== */
+
+.blue-line{
+        background-color: @blue-background;
+        height: 14px;
+}
+
+h1, h2 {
+    color: @blue;
+    font-weight: 600;
+}
+.purple{
+    color: @purple;
+    font-weight: 500;
+}
+
+.r-allign{
+    text-align: right;
+    margin-left:auto; 
+    margin-right:0;
+    float: right;
+}
+
+.container{
+    margin: auto;
+    max-width: 1200px;
+}
+
+#weekend{
+    
+    padding: 170px 190px;
+    min-height: 300px;
+    background: url("img/weekend/banner1_mujer.png") center -110px no-repeat;
+    background-size: 100%;
+    
+    .r-allign{
+        padding-left: 42%;
+    }
+    
+    h1,h2{
+        font-size: 48px;
+    }
+    
+    .purple{
+        font-weight: 600;
+    }
+    
+    .flex{
+        justify-content: flex-end;
+        .col{
+            margin: 10px;
+        }
+    }
+}
+
+.pad-top{
+    padding-top: 45px;
+    
+}
+.pad-bot{
+    padding-bottom: 50px;
+}
+
+#blue-ahcum{
+    //min-height: 200px;
+    .green-line{
+        min-height: 12px;
+        background-color: @green;    
+    }
+    
+    background-color: @blue-background;
+    
+    p{
+        color: white;
+        font-size: 22px;
+    }
+}
+
+#que-tendras{
+    
+    .fondo{
+        background: url(img/weekend/microfono.jpg) center no-repeat;
+        background-size: cover;
+        margin-right: 50px;
+    }
+    h2{
+      padding-top: 80px;  
+    }
+    
+    ul{
+      padding-bottom: 160px;
+        padding-right: 50px;
+    }
+       
+    ul li::before {
+          content: "• ";
+          color: @green;
+        font-size: 48px;
+        position: relative;
+        top: 12px;
+    }
+    li{
+            font-size: 19px;
+            color: #9a999e;
+            padding-bottom: 25px;
+            margin-left: 10px;
+            text-indent: -30px;
+    }
+}
+
+#speakers{
+    //height: 650px;
+    background: url(img/weekend/fondo-madera.jpg) center no-repeat;
+    background-size: cover;
+    .flex{
+        //align-items: center;
+    }
+    
+    h1{
+        padding-top: 60px;
+    }
+    
+    .col{
+        margin: 10px;
+    }
+    
+    .hc{
+        padding: 30px 70px;
+        text-align: left;
+        margin-top: 45px;
+        margin-bottom: 40px;
+        background-color: white;
+        border-radius: 6px;
+        box-shadow: 0px 0px 2px 2px; /*any color you want*/
+        
+        .small{
+            padding-right: 50px;
+        }
+        
+        h3{
+            color: @blue;
+            font-weight: 600;
+        }
+        h4{
+            color: @blue;
+            font-weight: 500;
+        }
+        
+        i{
+            width: 1%;
+        }
+        
+        p{
+            font-size: 24px;
+        }
+        
+        .i-col{
+            width: 5%;
+            margin: 7px;
+            margin-top: 0px;
+            margin-bottom: 40px;
+            
+        }
+        
+        .t-col{
+          margin-right: 20px;  
+        }
+        .icons{
+            i{
+                color: @purple;
+            }
+            
+        }
+        .horarios{
+            i{
+                color: @green;    
+            }
+            
+        }
+        
+        .info{
+            text-align: justify;
+            padding-top: 45px;
+        }
+    }
+    
+    .flex-center{
+        align-items: center;
+        flex-flow: column nowrap;
+          justify-content: center;
+          align-content: center;
+          align-items: stretch;
+    }
+    
+    .center{
+        align-items: center;
+    }
+}
+
+.green{
+    color: @green;
+    
+}
+
+#reserva{
+    
+    iframe{
+        width: 100%;
+    }
+    
+    .container{
+        max-width: 1350px;
+    }
+    
+    .pad-left{
+        padding-left:  60px;
+    }
+    
+    .flex{
+        .col{
+            width: 54%;
+        }
+        .p-col{
+            width: 46%;
+            background-color: @purple;
+            padding-bottom: 100px;
+            padding-left: 80px;
+            padding-right: 20px;
+            
+        }
+    }
+    h3{
+        font-weight: 600;
+    }
+    
+    h2{
+        padding-top: 100px;
+    }
+}
+
 
  /* ==========================================================================
    footer
