--- a/style.less
+++ b/style.less
@@ -866,6 +866,25 @@ h1, h2 {
 }
 
 #speakers{
+    ////////////////////////// experimental
+    
+    
+    .info{
+        display: none;
+    }
+    
+    .right{
+        .rotate{
+            -ms-transform: rotate(180deg); /* IE 9 */
+            -webkit-transform: rotate(180deg); /* Safari 3-8 */
+            transform: rotate(180deg);
+        }
+    }
+    
+    
+    
+    ////////////////////////////////////
+    
     //height: 650px;
     background: url(img/weekend/fondo-madera.jpg) center no-repeat;
     background-size: cover;
