Sin links pero para PC todo ya

--- a/style.less
+++ b/style.less
@@ -867,7 +867,9 @@ h1, h2 {
 
 #speakers{
     ////////////////////////// experimental
-    
+    h2{
+        padding-top: 50px;
+    }
     
     .info{
         display: none;
@@ -901,6 +903,7 @@ h1, h2 {
     }
     
     .hc{
+        min-width: 88%;
         padding: 30px 70px;
         text-align: left;
         margin-top: 45px;
