--- a/style.css
+++ b/style.css
@@ -671,6 +671,9 @@ h2 {
   background: url(img/weekend/fondo-madera.jpg) center no-repeat;
   background-size: cover;
 }
+#speakers h2 {
+  padding-top: 50px;
+}
 #speakers .info {
   display: none;
 }
@@ -688,6 +691,7 @@ h2 {
   margin: 10px;
 }
 #speakers .hc {
+  min-width: 88%;
   padding: 30px 70px;
   text-align: left;
   margin-top: 45px;
