--- a/style.css
+++ b/style.css
@@ -776,6 +776,220 @@ h2 {
   padding-top: 100px;
 }
 /* ==========================================================================
+   Weekend     RESPONSIVE
+   ========================================================================== */
+@media only screen and (max-width: 600px) {
+  .btn-blue {
+    padding: 4px 20px;
+    font-size: 12px;
+  }
+  .btn-purple {
+    padding: 4px 20px;
+    font-size: 12px;
+    min-height: 22px;
+  }
+  .blue-line {
+    height: 8px;
+  }
+  .purple {
+    color: #46156c;
+    font-weight: 500;
+  }
+  .r-allign {
+    text-align: right;
+    margin-left: auto;
+    margin-right: 0;
+    float: right;
+  }
+  .container {
+    margin: auto;
+    max-width: 600px;
+  }
+  #weekend {
+    padding: 20px 30px;
+    min-height: 220px;
+    background: url("img/weekend/banner1_mujer.png") center -20px no-repeat;
+    background-size: cover;
+  }
+  #weekend p {
+    line-height: 90%;
+    margin-bottom: 5px;
+  }
+  #weekend .r-allign {
+    padding-left: 30%;
+  }
+  #weekend .purple {
+    padding-left: 69px;
+  }
+  #weekend h1,
+  #weekend h2 {
+    font-size: 22px;
+  }
+  #weekend .purple {
+    font-weight: 600;
+  }
+  #weekend .flex {
+    justify-content: flex-end;
+    flex-direction: column;
+  }
+  #weekend .flex .col {
+    margin: 0px;
+  }
+  .pad-top {
+    padding-top: 20px;
+  }
+  .pad-bot {
+    padding-bottom: 22px;
+  }
+  #blue-ahcum {
+    background-color: #4493bc;
+  }
+  #blue-ahcum .green-line {
+    min-height: 10px;
+    background-color: #a3bd31;
+  }
+  #blue-ahcum p {
+    color: white;
+    font-size: 14px;
+    padding: 10px 15px;
+    margin-bottom: 0px;
+  }
+  #que-tendras .fondo {
+    background: url(img/weekend/microfono.jpg) center no-repeat;
+    background-size: cover;
+    margin-right: 50px;
+  }
+  #que-tendras h2 {
+    padding-top: 80px;
+  }
+  #que-tendras ul {
+    padding-bottom: 160px;
+    padding-right: 50px;
+  }
+  #que-tendras ul li::before {
+    content: "• ";
+    color: #a3bd31;
+    font-size: 48px;
+    position: relative;
+    top: 12px;
+  }
+  #que-tendras li {
+    font-size: 19px;
+    color: #9a999e;
+    padding-bottom: 25px;
+    margin-left: 10px;
+    text-indent: -30px;
+  }
+  #speakers {
+    background: url(img/weekend/fondo-madera.jpg) center no-repeat;
+    background-size: cover;
+  }
+  #speakers h2 {
+    padding-top: 50px;
+  }
+  #speakers .info {
+    display: none;
+  }
+  #speakers .right .rotate {
+    -ms-transform: rotate(180deg);
+    /* IE 9 */
+    -webkit-transform: rotate(180deg);
+    /* Safari 3-8 */
+    transform: rotate(180deg);
+  }
+  #speakers h1 {
+    padding-top: 60px;
+  }
+  #speakers .col {
+    margin: 10px;
+  }
+  #speakers .hc {
+    min-width: 88%;
+    padding: 30px 70px;
+    text-align: left;
+    margin-top: 45px;
+    margin-bottom: 40px;
+    background-color: white;
+    border-radius: 6px;
+    box-shadow: 0px 0px 2px 2px;
+    /*any color you want*/
+  }
+  #speakers .hc .small {
+    padding-right: 50px;
+  }
+  #speakers .hc h3 {
+    color: #5292bb;
+    font-weight: 600;
+  }
+  #speakers .hc h4 {
+    color: #5292bb;
+    font-weight: 500;
+  }
+  #speakers .hc i {
+    width: 1%;
+  }
+  #speakers .hc p {
+    font-size: 24px;
+  }
+  #speakers .hc .i-col {
+    width: 5%;
+    margin: 7px;
+    margin-top: 0px;
+    margin-bottom: 40px;
+  }
+  #speakers .hc .t-col {
+    margin-right: 20px;
+  }
+  #speakers .hc .icons i {
+    color: #46156c;
+  }
+  #speakers .hc .horarios i {
+    color: #a3bd31;
+  }
+  #speakers .hc .info {
+    text-align: justify;
+    padding-top: 45px;
+  }
+  #speakers .flex-center {
+    align-items: center;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-content: center;
+    align-items: stretch;
+  }
+  #speakers .center {
+    align-items: center;
+  }
+  .green {
+    color: #a3bd31;
+  }
+  #reserva iframe {
+    width: 100%;
+  }
+  #reserva .container {
+    max-width: 1350px;
+  }
+  #reserva .pad-left {
+    padding-left: 60px;
+  }
+  #reserva .flex .col {
+    width: 54%;
+  }
+  #reserva .flex .p-col {
+    width: 46%;
+    background-color: #46156c;
+    padding-bottom: 100px;
+    padding-left: 80px;
+    padding-right: 20px;
+  }
+  #reserva h3 {
+    font-weight: 600;
+  }
+  #reserva h2 {
+    padding-top: 100px;
+  }
+}
+/* ==========================================================================
    footer
    ========================================================================== */
 #footer {
