--- a/style.less
+++ b/style.less
@@ -1018,6 +1018,289 @@ h1, h2 {
 }
 
 
+/* ==========================================================================
+   Weekend     RESPONSIVE
+   ========================================================================== */
+
+@media only screen and (max-width: 600px) {
+    
+    .btn-blue{
+        padding: 4px 20px;
+        font-size: 12px;
+    }
+    .btn-purple{
+        padding: 4px 20px;
+        font-size: 12px;
+        min-height: 22px;
+    }
+
+.blue-line{
+        height: 8px;
+}
+
+.purple{
+    color: @purple;
+    font-weight: 500;
+}
+
+.r-allign{
+    text-align: right;
+    margin-left:auto; 
+    margin-right:0;
+    float: right;
+}
+
+.container{
+    margin: auto;
+    max-width: 600px;
+}
+
+#weekend{
+    
+    padding: 20px 30px;
+    min-height: 220px;
+    background: url("img/weekend/banner1_mujer.png") center -20px no-repeat;
+    background-size: cover;
+    
+    p{
+        line-height: 90%;
+        margin-bottom: 5px;
+    }
+    
+    .r-allign{
+        padding-left: 30%;
+    }
+    .purple{
+        padding-left: 69px;
+    }
+    
+    h1,h2{
+        font-size: 22px;
+    }
+    
+    .purple{
+        font-weight: 600;
+    }
+    
+    .flex{
+        justify-content: flex-end;
+        flex-direction: column;
+        .col{
+            margin: 0px;
+        }
+    }
+}
+
+.pad-top{
+    padding-top: 20px;
+    
+}
+.pad-bot{
+    padding-bottom: 22px;
+}
+
+#blue-ahcum{
+    //min-height: 200px;
+    .green-line{
+        min-height: 10px;
+        background-color: @green;    
+    }
+    
+    background-color: @blue-background;
+    
+    p{
+        color: white;
+        font-size: 14px;
+        padding: 10px 15px;
+        margin-bottom: 0px;
+    }
+}
+
+#que-tendras{
+    
+    .fondo{
+        background: url(img/weekend/microfono.jpg) center no-repeat;
+        background-size: cover;
+        margin-right: 50px;
+    }
+    h2{
+      padding-top: 80px;  
+    }
+    
+    ul{
+      padding-bottom: 160px;
+        padding-right: 50px;
+    }
+       
+    ul li::before {
+          content: "• ";
+          color: @green;
+        font-size: 48px;
+        position: relative;
+        top: 12px;
+    }
+    li{
+            font-size: 19px;
+            color: #9a999e;
+            padding-bottom: 25px;
+            margin-left: 10px;
+            text-indent: -30px;
+    }
+}
+
+#speakers{
+    ////////////////////////// experimental
+    h2{
+        padding-top: 50px;
+    }
+    
+    .info{
+        display: none;
+    }
+    
+    .right{
+        .rotate{
+            -ms-transform: rotate(180deg); /* IE 9 */
+            -webkit-transform: rotate(180deg); /* Safari 3-8 */
+            transform: rotate(180deg);
+        }
+    }
+    
+    
+    
+    ////////////////////////////////////
+    
+    //height: 650px;
+    background: url(img/weekend/fondo-madera.jpg) center no-repeat;
+    background-size: cover;
+    .flex{
+        //align-items: center;
+    }
+    
+    h1{
+        padding-top: 60px;
+    }
+    
+    .col{
+        margin: 10px;
+    }
+    
+    .hc{
+        min-width: 88%;
+        padding: 30px 70px;
+        text-align: left;
+        margin-top: 45px;
+        margin-bottom: 40px;
+        background-color: white;
+        border-radius: 6px;
+        box-shadow: 0px 0px 2px 2px; /*any color you want*/
+        
+        .small{
+            padding-right: 50px;
+        }
+        
+        h3{
+            color: @blue;
+            font-weight: 600;
+        }
+        h4{
+            color: @blue;
+            font-weight: 500;
+        }
+        
+        i{
+            width: 1%;
+        }
+        
+        p{
+            font-size: 24px;
+        }
+        
+        .i-col{
+            width: 5%;
+            margin: 7px;
+            margin-top: 0px;
+            margin-bottom: 40px;
+            
+        }
+        
+        .t-col{
+          margin-right: 20px;  
+        }
+        .icons{
+            i{
+                color: @purple;
+            }
+            
+        }
+        .horarios{
+            i{
+                color: @green;    
+            }
+            
+        }
+        
+        .info{
+            text-align: justify;
+            padding-top: 45px;
+        }
+    }
+    
+    .flex-center{
+        align-items: center;
+        flex-flow: column nowrap;
+          justify-content: center;
+          align-content: center;
+          align-items: stretch;
+    }
+    
+    .center{
+        align-items: center;
+    }
+}
+
+.green{
+    color: @green;
+    
+}
+
+#reserva{
+    
+    iframe{
+        width: 100%;
+    }
+    
+    .container{
+        max-width: 1350px;
+    }
+    
+    .pad-left{
+        padding-left:  60px;
+    }
+    
+    .flex{
+        .col{
+            width: 54%;
+        }
+        .p-col{
+            width: 46%;
+            background-color: @purple;
+            padding-bottom: 100px;
+            padding-left: 80px;
+            padding-right: 20px;
+            
+        }
+    }
+    h3{
+        font-weight: 600;
+    }
+    
+    h2{
+        padding-top: 100px;
+    }
+}
+
+}
  /* ==========================================================================
    footer
    ========================================================================== */  
