--- a/style.less
+++ b/style.less
@@ -1055,6 +1055,7 @@ h1, h2 {
     max-width: 600px;
 }
 
+    //RESPONSIVE
 #weekend{
     
     padding: 20px 30px;
@@ -1098,7 +1099,7 @@ h1, h2 {
 .pad-bot{
     padding-bottom: 22px;
 }
-
+//RESPONSIVE
 #blue-ahcum{
     //min-height: 200px;
     .green-line{
@@ -1115,21 +1116,21 @@ h1, h2 {
         margin-bottom: 0px;
     }
 }
-
+//RESPONSIVE
 #que-tendras{
     
     .fondo{
-        background: url(img/weekend/microfono.jpg) center no-repeat;
-        background-size: cover;
         margin-right: 50px;
     }
     h2{
-      padding-top: 80px;  
+        text-align: center;
+      padding-top: 30px;  
     }
     
     ul{
-      padding-bottom: 160px;
-        padding-right: 50px;
+      padding-bottom: 40px;
+        padding-right: 30px;
+        padding-left: 40px;
     }
        
     ul li::before {
@@ -1140,14 +1141,14 @@ h1, h2 {
         top: 12px;
     }
     li{
-            font-size: 19px;
+            font-size: 16px;
             color: #9a999e;
-            padding-bottom: 25px;
+            padding-bottom: 15px;
             margin-left: 10px;
             text-indent: -30px;
     }
 }
-
+//RESPONSIVE
 #speakers{
     ////////////////////////// experimental
     h2{
@@ -1169,10 +1170,7 @@ h1, h2 {
     
     
     ////////////////////////////////////
-    
-    //height: 650px;
-    background: url(img/weekend/fondo-madera.jpg) center no-repeat;
-    background-size: cover;
+
     .flex{
         //align-items: center;
     }
@@ -1182,21 +1180,24 @@ h1, h2 {
     }
     
     .col{
-        margin: 10px;
+        margin: 0px;
     }
     
     .hc{
         min-width: 88%;
         padding: 30px 70px;
-        text-align: left;
+        text-align: center;
         margin-top: 45px;
         margin-bottom: 40px;
         background-color: white;
         border-radius: 6px;
         box-shadow: 0px 0px 2px 2px; /*any color you want*/
         
-        .small{
-            padding-right: 50px;
+        .small{ //GOOD CENTERING
+            padding-right: 0px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
         
         h3{
@@ -1204,8 +1205,7 @@ h1, h2 {
             font-weight: 600;
         }
         h4{
-            color: @blue;
-            font-weight: 500;
+            font-size: 16px;
         }
         
         i{
@@ -1213,19 +1213,20 @@ h1, h2 {
         }
         
         p{
-            font-size: 24px;
+            font-size: 14px;
         }
         
         .i-col{
-            width: 5%;
-            margin: 7px;
+            width: 16%;
+            margin: 3px;
             margin-top: 0px;
-            margin-bottom: 40px;
+            margin-bottom: 10px;
             
         }
         
         .t-col{
-          margin-right: 20px;  
+          margin-right: 0px;
+            width: 30%;
         }
         .icons{
             i{
@@ -1235,7 +1236,8 @@ h1, h2 {
         }
         .horarios{
             i{
-                color: @green;    
+                color: @green; 
+                padding-right: 20px;
             }
             
         }
@@ -1263,7 +1265,7 @@ h1, h2 {
     color: @green;
     
 }
-
+//RESPONSIVE
 #reserva{
     
     iframe{
@@ -1271,21 +1273,22 @@ h1, h2 {
     }
     
     .container{
-        max-width: 1350px;
+        max-width: 650px;
     }
     
     .pad-left{
-        padding-left:  60px;
+        padding-left:  10px;
+        text-align: center;
     }
     
     .flex{
         .col{
-            width: 54%;
+            width: 100%;
         }
         .p-col{
-            width: 46%;
+            width: 100%;
             background-color: @purple;
-            padding-bottom: 100px;
+            padding-bottom: 40px;
             padding-left: 80px;
             padding-right: 20px;
             
@@ -1296,9 +1299,12 @@ h1, h2 {
     }
     
     h2{
-        padding-top: 100px;
+        padding-top: 30px;
     }
 }
+    
+    
+    
 
 }
  /* ==========================================================================
@@ -1338,6 +1344,48 @@ h1, h2 {
     .columna{
         width: 30%;
     }
+}
+
+@media only screen and (max-width: 600px) {
+    #footer{
+    padding: 20px;
+    background-color: @black;
+    .menu-footer{
+        padding-left: 15px;
+    }
+    
+    a:hover{
+        color: @gray;
+    }
+    
+    a{
+        color: white;
+    }
+    
+    p{
+        color: white;
+        font-size: 12px;
+        word-spacing: 4px;
+    }
+    #flogo{
+        width: 40%;
+        p{
+            padding: 0px;
+            margin: 0px;
+        }
+    }
+    .bot{
+        padding-top: 0px;
+    }
+    .columna{
+        width: 100%;
+    }
+        
+        img{
+            padding-bottom: 20px;
+        }
+}
+
 }
 
 
